first release fix

--- a/steel_deploy.ipynb
+++ b/steel_deploy.ipynb
@@ -29,18 +29,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hide\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from fastai.vision.all import *\n",
     "from steel_segmentation.all import * \n",
     "import cv2\n",
@@ -56,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# loading data and models\n",
     "data_url = \"https://www.dropbox.com/s/wzdtphbtaouaet5/data.zip?dl=1\"\n",
-    "data_path = untar_data(data_url, fname=\"data.zip\", dest=\".\")\n",
+    "data_path = untar_data(data_url, fname=\"data.zip\", dest=os.getcwd())\n",
     "\n",
     "effnet_model_url = \"https://www.dropbox.com/s/f52j2u4trox0i6o/efficientnet-b2.pkl?dl=1\"\n",
     "effnet_model_path = download_data(effnet_model_url, \"effnet_export.pkl\")\n",
@@ -72,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -392,12 +380,22 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a692dfd0ec943e9b1f085d111d50286",
+       "model_id": "8e3bf0adc546455da94d157d52a18963",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Accordion(children=(VBox(children=(RadioButtons(description='Select a model:', index=1, options=(('Model 1', 0…"
+       "Accordion(children=(VBox(children=(RadioButtons(description='Deep Learning model:', index=1, options=(('Model …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
