first release fix

--- a/steel_deploy.ipynb
+++ b/steel_deploy.ipynb
@@ -53,7 +53,7 @@
     "data_path = untar_data(data_url, fname=\"data.zip\", dest=os.getcwd())\n",
     "\n",
     "effnet_model_url = \"https://www.dropbox.com/s/f52j2u4trox0i6o/efficientnet-b2.pkl?dl=1\"\n",
-    "effnet_model_path = download_data(effnet_model_url, \"effnet_export.pkl\")\n",
+    "#effnet_model_path = download_data(effnet_model_url, \"effnet_export.pkl\")\n",
     "resnet_model_url = \"https://www.dropbox.com/s/qumn1dshh9b0154/resnet_export.pkl?dl=1\"\n",
     "resnet_model_path = download_data(resnet_model_url, \"resnet_export.pkl\")"
    ]
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# config selection\n",
-    "models = [effnet_model_path, resnet_model_path]\n",
+    "models = [resnet_model_path] #effnet_model_path,\n",
     "\n",
     "def select_learner(selection):\n",
     "    return load_learner(models[selection], cpu=True)\n",
@@ -75,7 +75,7 @@
     "        (\"Model 1\", 0), \n",
     "        (\"Model 2\", 1)\n",
     "    ],\n",
-    "    value=1,\n",
+    "    value=0,\n",
     "    description=\"Deep Learning model:\",\n",
     "    style=style\n",
     ")\n",
