first release fix last

--- a/steel_deploy.ipynb
+++ b/steel_deploy.ipynb
@@ -39,6 +39,14 @@
     "def opt_func(params, **kwargs): return OptimWrapper(params, torch.optim.Adam, **kwargs)\n",
     "def splitter(m): return convert_params([[m.encoder], [m.decoder], [m.segmentation_head]])\n",
     "\n",
+    "def smp_splitter(m): \n",
+    "    return convert_params([[m.encoder], [m.decoder], [m.segmentation_head]])\n",
+    "\n",
+    "def opt_func(params, torch_opt, **kwargs): \n",
+    "    \"\"\"Pytorch Optimizer for fastai `Learner`\"\"\"\n",
+    "    return OptimWrapper(params, torch_opt, **kwargs)\n",
+    "torch_opt_func = partial(opt_func, torch_opt=torch.optim.Adam)\n",
+    "\n",
     "style = {'description_width': 'initial'}"
    ]
   },
@@ -53,7 +61,7 @@
     "data_path = untar_data(data_url, fname=\"data.zip\", dest=os.getcwd())\n",
     "\n",
     "effnet_model_url = \"https://www.dropbox.com/s/f52j2u4trox0i6o/efficientnet-b2.pkl?dl=1\"\n",
-    "#effnet_model_path = download_data(effnet_model_url, \"effnet_export.pkl\")\n",
+    "effnet_model_path = download_data(effnet_model_url, \"effnet_export.pkl\")\n",
     "resnet_model_url = \"https://www.dropbox.com/s/qumn1dshh9b0154/resnet_export.pkl?dl=1\"\n",
     "resnet_model_path = download_data(resnet_model_url, \"resnet_export.pkl\")"
    ]
@@ -65,7 +73,7 @@
    "outputs": [],
    "source": [
     "# config selection\n",
-    "models = [resnet_model_path] #effnet_model_path,\n",
+    "models = [effnet_model_path, resnet_model_path]\n",
     "\n",
     "def select_learner(selection):\n",
     "    return load_learner(models[selection], cpu=True)\n",
@@ -75,7 +83,7 @@
     "        (\"Model 1\", 0), \n",
     "        (\"Model 2\", 1)\n",
     "    ],\n",
-    "    value=0,\n",
+    "    value=1,\n",
     "    description=\"Deep Learning model:\",\n",
     "    style=style\n",
     ")\n",
