--- a/steel_deploy.ipynb
+++ b/steel_deploy.ipynb
@@ -27,9 +27,62 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from fastai.vision.all import *\n",
+    "from zipfile import ZipFile\n",
+    "\n",
+    "def zip_extract(fname, dest):\n",
+    "    zipfile.ZipFile(fname, mode='r').extractall(dest)\n",
+    "    \n",
+    "this_dir = Path()\n",
+    "# loading data and models\n",
+    "data_url = \"https://www.dropbox.com/s/wzdtphbtaouaet5/data.zip?dl=1\"\n",
+    "data_path = untar_data(data_url, extract_func=zip_extract, dest=this_dir)\n",
+    "\n",
+    "effnet_model_url = \"https://www.dropbox.com/s/f52j2u4trox0i6o/efficientnet-b2.pkl?dl=1\"\n",
+    "effnet_model_path = download_data(effnet_model_url, \"effnet_export.pkl\")\n",
+    "resnet_model_url = \"https://www.dropbox.com/s/qumn1dshh9b0154/resnet_export.pkl?dl=1\"\n",
+    "resnet_model_path = download_data(resnet_model_url, \"resnet_export.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from steel_segmentation.all import * \n",
     "import cv2\n",
     "import ipywidgets as widgets\n",
@@ -48,22 +101,6 @@
     "torch_opt_func = partial(opt_func, torch_opt=torch.optim.Adam)\n",
     "\n",
     "style = {'description_width': 'initial'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# loading data and models\n",
-    "data_url = \"https://www.dropbox.com/s/wzdtphbtaouaet5/data.zip?dl=1\"\n",
-    "data_path = untar_data(data_url, fname=\"data.zip\", dest=os.getcwd())\n",
-    "\n",
-    "effnet_model_url = \"https://www.dropbox.com/s/f52j2u4trox0i6o/efficientnet-b2.pkl?dl=1\"\n",
-    "effnet_model_path = download_data(effnet_model_url, \"effnet_export.pkl\")\n",
-    "resnet_model_url = \"https://www.dropbox.com/s/qumn1dshh9b0154/resnet_export.pkl?dl=1\"\n",
-    "resnet_model_path = download_data(resnet_model_url, \"resnet_export.pkl\")"
    ]
   },
   {
@@ -215,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -388,12 +425,22 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e3bf0adc546455da94d157d52a18963",
+       "model_id": "0883839fed9343e397b0f3a390587523",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Accordion(children=(VBox(children=(RadioButtons(description='Deep Learning model:', index=1, options=(('Model …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -452,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.5"
   },
   "toc": {
    "base_numbering": 1,
